--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
 					<br />
 					Good luck have fun!
 				</p>
-				<div class="width"><button class="increase-decrease" id="decrease">-</button> width: <span id="width"></span> <button class="increase-decrease" id="increase">+</button></div>
+				<div class="width">
+					<button class="increase-decrease" id="decrease">-</button>
+					width: <span id="width"></span>
+					<button class="increase-decrease" id="increase">+</button>
+				</div>
 				<button id="ok">Ok</button>
 			</div>
 			<div class="timer">
-				<span id="subtract">-</span><span id="seconds"></span> seconds
+				<span id="subtract">-</span>
+				<div class="time"><span id="seconds"></span> seconds</div>
 				<span id="add">+</span>
 			</div>
 			<div class="score">Score: <span id="score"></span></div>
