--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 					<br />
 					Good luck have fun!
 				</p>
+				<div class="highscore">
+					<p>Your Highscore is: <span id="highscore"></span></p>
+				</div>
 				<div class="width">
 					<button class="increase-decrease" id="decrease">-</button>
 					width: <span id="width"></span>
